style.css
/* ... */
#greetingNotShownBox {
    text-align: center;
    display: flex;
    margin: 15px 0 -5px 0;
    justify-content: center;
}

#greetingNotShownBox label {
    margin: auto 2.5px;
    text-decoration: underline var(--OPPtranspCol3);
    color: var(--OPPsolidCol3);
}

#greetingNotShownBox span {
    margin: auto 2.5px;
    color: var(--OPPtranspCol1);
}

#submitUserInfoBtn {
    transition: all 0.3s ease;
    margin-top: 10px;
}

.submitBtn {
    text-align: center;
    display: flex;
    margin: 0px 15px 10px auto;
    padding: 5px 10px;
    font-size: 20px;
    font-family: Noto Sans;
    border-radius: 15px;
    border: none;
    font-weight: 600;
    background-color: var(--solidAccentColor0);
    color: var(--OPPsolidCol3);
    scale: 1;
    transition: 0.5s ease;
}


.submitBtn:active {
    scale: 0.9;
    background-color: var(--solidAccentColor0);
    color: var(--OPPsolidCol0);
}

.dataDayAndHourContainer {
    width: 100%;
    display: flex;
    margin: 10px auto;
    justify-content: center;
}

.dataDayAndHourContainer select {
    font-size: 1.2em;
    font-weight: 600;
    padding: 2px 5px;
    margin-bottom: 3px;
    border-color: var(--solidAccentColor2);
    background-color: var(--transAccentColor3);
    font-family: var(--StandardTextFont);
}

.dataGrid {
    display: grid;
    grid-template-columns: 3fr 7fr;
    margin: 10px 5px;
}

.dataGrid input,
.dataGrid label {
    display: flex;
    align-items: center;
    font-weight: 500;
    margin: 5px 10px;
}

.dataGrid input,
.dataForm input {
    font-weight: 400;
    border-color: var(--solidAccentColor2);
}

/* ---------------  SCHOOLMATES SECTION IN SETTINGS  --------------- */

.matesClassNumSelectionBox {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    margin: 10px 0 -5px 0;
}

.matesClassNumSelectionBox label {
    margin: 0;
}

.matesClassNumSelectionBox select {
    font-weight: 600;
    font-size: 1.2em;
    padding: 2px 5px;
    border-color: var(--solidAccentColor2);
    background-color: var(--transAccentColor3);
    font-family: var(--StandardTextFont);
}


/* ---------------  APP SETTINGS SECTION  --------------- */

.switch-container {
    display: grid;
    grid-template-columns: 7fr 3fr;
    margin: 10px 5px;
    align-items: center;
}

.appInfoBox {
    grid-template-columns: 2fr 3fr;
    text-align: right;
}

#appFooterContainer {
    opacity: 0.8;
    background-color: transparent;
    display: flex;
    bottom: 0;
    margin: 25px auto 5px auto;
    justify-content: center;
    flex-direction: row;
}

.roundedWakaBadge {
    margin: 10px;
    width: 50%;
    border-radius: 6px;
    border-color: var(--boxBorderColor);
    box-shadow: var(--boxShadow4);
}

#appFooterContainer label {
    margin: auto 10px;
}

#socialIcon {
    width: 35px;
    height: 35px;
    align-items: center;
    display: flex;
    opacity: 0.8;
    filter: var(--socialIconCol);
}

#socialIcon:active {
    transition: .2s all;
    rotate: 360deg;
}

.annoyedCatDiv {
    animation: getStarted 0.5s ease-in-out;
    width: 80vw;
    height: 50vh;
    display: flex;
    flex-direction: column;
    border: solid 2px var(--OPPsolidCol1);
    border-radius: 20px;
    box-shadow: var(--boxShadow2);
    justify-content: center;
    align-items: center;
    margin: auto auto;
}

.annoyedCatDiv img {
    opacity: 0.8;
    rotate: 180deg;
}

.annoyedCatDiv h1 {
    font-family: var(--StandardTextFont);
    font-weight: 800;
    color: var(--OPPsolidCol1);
    text-align: center;
    margin-top: 20px;
}

.appIcon {
    width: 40px;
    display: flex;
    margin: auto 10px;
    justify-content: center;
    align-items: center;
    transition: 0.3s scale ease-in-out;
}

.appIcon:active {
    scale: 0.90;
}

.nerdLinks {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 5px 5px 5px;
    font-family: var(--StandardTextFont);
    font-weight: 300;
    font-size: 0.75em;
    text-decoration: underline 1px var(--OPPsolidCol2);
}

a {
    text-decoration: underline 1px var(--OPPsolidCol2);
    color: var(--OPPsolidCol4);
}

.switch-container input,
.switch-container label,
.switch-container button {
    /* height: 40px; */
    display: flex;
    align-items: center;
    /* font-weight: 500; */
    margin: 5px 10px;
    text-align: center;
}

#resetAllDataBtn {
    padding: 5px 10px;
    justify-content: center;
}

.importExportBtnContainer {
    display: flex;
    margin: 5px 10px;
    margin-left: auto;
    flex-direction: row;
    justify-content: right;
    width: fit-content;
}

.importExportBtnContainer button {
    margin: 0px 0.5px;
    border-radius: 0 15px 15px 0;
    width: 100%;
}

#exportDialogBox,
#importDialogBox {
    animation: appTab 0.3s ease;
    display: none;
    border: solid 2px;
    border-color: var(--OPPtranspCol4);
    margin: -5px 5px 0 5px;
    border-radius: 7px 7px 15px 15px;
    justify-content: space-between;
}

#importDialogBox {
    flex-wrap: wrap;
    padding: 8px;
}

#importDialogBox select {
    text-align: center;
    padding: 5px 0;
    margin: 0;
    width: 40%;
}

#importDialogBox input {
    text-align: left;
    padding: 5px;
    margin: 0;
    width: 53%;
}

#importDialogBox button {
    width: 100%;
    margin: 8px 0 0 0;
    border-radius: 10px;
    justify-content: center;
}

#exportDialogBox select {
    text-align: center;
}

#exportDialogBox select,
#exportDialogBox label {
    padding: 0;
    margin: 10px;
}

#importDataBtn {
    border-radius: 15px 0 0 15px;
}

#themeSelection,
#timeInput {
    margin-left: auto;
    border: solid 1px;
    border-color: var(--solidAccentColor2);
}

.importExportBtnContainer span {
    height: 27px;
    display: flex;
    align-items: center;
    font-size: 24px;
}

.alignToRight {
    justify-content: right;
}
/* ... */

